syntax = "proto3";

package rivet.backend.pkg.team.msg.member_create_fail;

import "proto/common.proto";

enum ErrorCode {
	UNKNOWN = 0;
	TEAM_FULL = 1;
}

/// name = "msg-team-member-create-fail"
/// parameters = [
/// 	{ name = "team_id" },
/// 	{ name = "user_id" },
/// ]
message Message {
	rivet.common.Uuid team_id = 1;
	rivet.common.Uuid user_id = 2;
	ErrorCode error_code = 3;
}

